# UnifyRE

./: Cargo.toml  README.md
src/: main.rs
src/cli/: commands.rs
src/core/: analyzer.rs  debugger.rs  explanations.rs  loader.rs  mod.rs  plugins.rs  profiles.rs  traits.rs
src/errors/: error.rs  mod.rs
src/formats/: elf.rs  mach.rs  pe.rs
src/output/: human.rs  json.rs  mod.rs
