[package]
name = "unifyre"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
capstone = "0.12"
object = "0.36"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
